--- a/hanson01/webpage01.html
+++ b/hanson01/webpage01.html
@@ -7,6 +7,43 @@
 </head>
 
 <body>
+<h1>私はやったぞ</h1>
 <p>Hello world!! <strong>You took the first step</strong></p>
+
+<nav>
+<ul>
+<li><a href="#link1">はじめに</a></li>
+<li><a href="#link2">事前準備</a></li>
+</ul>
+</nav>
+</header>
+<main>
+<section id="link1">
+<h2>はじめに</h2>
+<p>これは私が誰かのために作成したWeb関係の入門ハンズオン資料です。<br>
+入門ということもあり、あまり複雑なものや説明不足なものもございますのでご了承ください。<br>
+ただ、間違いやご指導あれば気軽に連絡はください。</p>
+</section>
+<section id="link2">
+<h2>事前準備</h2>
+<p>まず初めに何かコードエディタを準備するのをおすすめします。<br>
+私が学生のころお世話になってたのをいくつか紹介すると</p>
+<ul>
+  <li>Visual Studio Code</li>
+  <li>Notepad++</li>
+  <li>vim(Linuxの場合)  などなど...</li>
+</ul>
+<p>「○○ インストール」とかでググるとインストール手順はいっぱい出てくるのでここではインストール手順は省略します。</p>
+
+<p>また、最近はAIもプログラミング学習に非常に友好的ですので活用してください。<br>
+ChatGPTもいいですが、コード生成ならClaudeとかもおすすめです。</p>
+
+
+</section>
+</main>
+<footer>
+<p>フッターでっせ</p>
+</footer>
+
 </body>
 </html>
