--- a/hanson01/webpage01.html
+++ b/hanson01/webpage01.html
@@ -35,7 +35,7 @@
 </ul>
 <p>「○○ インストール」とかでググるとインストール手順はいっぱい出てくるのでここではインストール手順は省略します。</p>
 
-<p>また、最近はAIもプログラミング学習に非常に友好的ですので活用してください。<br>
+<p>また、最近はAIもプログラミング学習に非常に有効的ですので活用してください。<br>
 ChatGPTもいいですが、コード生成ならClaudeとかもおすすめです。</p>
 
 
